==> iMax14/Drone/STM32/_backup/Drone_MASTER/Src/MPU9250.c <==
#include "MPU9250.h"

int write_register(uint16_t Adress, uint16_t subAddress, uint8_t data){


	status = HAL_I2C_Mem_Write(&hi2c1, Adress << 1 , subAddress, 1, &data, 1, 1000);
	if(status != HAL_OK ) {
		while(1);
	}	


	/* read back the register */
//  read_register(Adress,subAddress,Rx_data,1);
//	
//  /* check the read back register against the written register */
//  if(Rx_data[0] == data) {
//    return 1;
//  }
//  else{
//    return -1;
//  }
	return 1;
	
}

int writeAK8963Register(uint16_t Adress, uint16_t subAddress, uint8_t data){
  // set slave 0 to the AK8963 and set for write
	if (write_register(Adress,I2C_SLV0_ADDR,AK8963_I2C_ADDR) < 0) {
    return -1;
  }
  // set the register to the desired AK8963 sub address 
	if (write_register(Adress,I2C_SLV0_REG,subAddress) < 0) {
    return -2;
  }
  // store the data for write
	if (write_register(Adress,I2C_SLV0_DO,data) < 0) {
    return -3;
  }
  // enable I2C and send 1 byte
	if (write_register(Adress,I2C_SLV0_CTRL,I2C_SLV0_EN | (uint8_t)1) < 0) {
    return -4;
  }
	// read the register and confirm
	if (readAK8963Registers(Adress,subAddress,1,Rx_data) < 0) {
    return -5;
  }
//	if(Rx_data[0] == data) {
//  	return 1;
//  } else{
//  	return -6;
//  }
	return 1;
}

int readAK8963Registers(uint16_t Adress, uint16_t subAddress, uint8_t count, uint8_t* dest){
  // set slave 0 to the AK8963 and set for read
	if (write_register(Adress,I2C_SLV0_ADDR,AK8963_I2C_ADDR | I2C_READ_FLAG) < 0) {
    return -1;
  }
  // set the register to the desired AK8963 sub address
	if (write_register(Adress,I2C_SLV0_REG,subAddress) < 0) {
    return -2;
  }
  // enable I2C and request the bytes
	if (write_register(Adress,I2C_SLV0_CTRL,I2C_SLV0_EN | count) < 0) {
    return -3;
  }
	HAL_Delay(1); // takes some time for these registers to fill
  // read the bytes off the MPU9250 EXT_SENS_DATA registers
	read_register(Adress,EXT_SENS_DATA_00,dest,count); 
  
	return 1;
}

int setGyroRange(GyroRange range) {

  switch(range) {
    case GYRO_RANGE_250DPS: {
      // setting the gyro range to 250DPS
      if(write_register(MPU9250_ADDRESS,GYRO_CONFIG,GYRO_FS_SEL_250DPS) < 0){
        return -1;
      }
      _gyroScale = 250.0f/32767.5f * _d2r; // setting the gyro scale to 250DPS
      break;
    }
    case GYRO_RANGE_500DPS: {
      // setting the gyro range to 500DPS
      if(write_register(MPU9250_ADDRESS,GYRO_CONFIG,GYRO_FS_SEL_500DPS) < 0){
        return -1;
      }
      _gyroScale = 500.0f/32767.5f * _d2r; // setting the gyro scale to 500DPS
      break;  
    }
    case GYRO_RANGE_1000DPS: {
      // setting the gyro range to 1000DPS
      if(write_register(MPU9250_ADDRESS,GYRO_CONFIG,GYRO_FS_SEL_1000DPS) < 0){
        return -1;
      }
      _gyroScale = 1000.0f/32767.5f * _d2r; // setting the gyro scale to 1000DPS
      break;
    }
    case GYRO_RANGE_2000DPS: {
      // setting the gyro range to 2000DPS
      if(write_register(MPU9250_ADDRESS,GYRO_CONFIG,GYRO_FS_SEL_2000DPS) < 0){
        return -1;
      }
      _gyroScale = 2000.0f/32767.5f * _d2r; // setting the gyro scale to 2000DPS
      break;
    }
  }
  _gyroRange = range;
  return 1;
}

int setDlpfBandwidth(DlpfBandwidth bandwidth) {

	
  switch(bandwidth) {
    case DLPF_BANDWIDTH_184HZ: {
      if(write_register(MPU9250_ADDRESS,ACCEL_CONFIG2,ACCEL_DLPF_184) < 0){ // setting accel bandwidth to 184Hz
        return -1;
      } 
      if(write_register(MPU9250_ADDRESS,CONFIG,GYRO_DLPF_184) < 0){ // setting gyro bandwidth to 184Hz
        return -2;
      }
      break;
    }
    case DLPF_BANDWIDTH_92HZ: {
      if(write_register(MPU9250_ADDRESS,ACCEL_CONFIG2,ACCEL_DLPF_92) < 0){ // setting accel bandwidth to 92Hz
        return -1;
      } 
      if(write_register(MPU9250_ADDRESS,CONFIG,GYRO_DLPF_92) < 0){ // setting gyro bandwidth to 92Hz
        return -2;
      }
      break;
    }
    case DLPF_BANDWIDTH_41HZ: {
      if(write_register(MPU9250_ADDRESS,ACCEL_CONFIG2,ACCEL_DLPF_41) < 0){ // setting accel bandwidth to 41Hz
        return -1;
      } 
      if(write_register(MPU9250_ADDRESS,CONFIG,GYRO_DLPF_41) < 0){ // setting gyro bandwidth to 41Hz
        return -2;
      }
      break;
    }
    case DLPF_BANDWIDTH_20HZ: {
      if(write_register(MPU9250_ADDRESS,ACCEL_CONFIG2,ACCEL_DLPF_20) < 0){ // setting accel bandwidth to 20Hz
        return -1;
      } 
      if(write_register(MPU9250_ADDRESS,CONFIG,GYRO_DLPF_20) < 0){ // setting gyro bandwidth to 20Hz
        return -2;
      }
      break;
    }
    case DLPF_BANDWIDTH_10HZ: {
      if(write_register(MPU9250_ADDRESS,ACCEL_CONFIG2,ACCEL_DLPF_10) < 0){ // setting accel bandwidth to 10Hz
        return -1;
      } 
      if(write_register(MPU9250_ADDRESS,CONFIG,GYRO_DLPF_10) < 0){ // setting gyro bandwidth to 10Hz
        return -2;
      }
      break;
    }
    case DLPF_BANDWIDTH_5HZ: {
      if(write_register(MPU9250_ADDRESS,ACCEL_CONFIG2,ACCEL_DLPF_5) < 0){ // setting accel bandwidth to 5Hz
        return -1;
      } 
      if(write_register(MPU9250_ADDRESS,CONFIG,GYRO_DLPF_5) < 0){ // setting gyro bandwidth to 5Hz
        return -2;
      }
      break;
    }
  }
  _bandwidth = bandwidth;
  return 1;
}

int setSrd(uint8_t srd) {

  /* setting the sample rate divider to 19 to facilitate setting up magnetometer */
  if(write_register(MPU9250_ADDRESS,SMPDIV,19) < 0){ // setting the sample rate divider
    return -1;
  }
  if(srd > 9){
    // set AK8963 to Power Down
    if(writeAK8963Register(MPU9250_ADDRESS,AK8963_CNTL1,AK8963_PWR_DOWN) < 0){
      return -2;
    }
    HAL_Delay(100); // long wait between AK8963 mode changes  
    // set AK8963 to 16 bit resolution, 8 Hz update rate
    if(writeAK8963Register(MPU9250_ADDRESS,AK8963_CNTL1,AK8963_CNT_MEAS1) < 0){
      return -3;
    }
    HAL_Delay(100); // long wait between AK8963 mode changes     
    // instruct the MPU9250 to get 7 bytes of data from the AK8963 at the sample rate
    readAK8963Registers(MPU9250_ADDRESS,AK8963_HXL,7,Rx_data);
  } else {
    // set AK8963 to Power Down
    if(writeAK8963Register(MPU9250_ADDRESS,AK8963_CNTL1,AK8963_PWR_DOWN) < 0){
      return -2;
    }
    HAL_Delay(100); // long wait between AK8963 mode changes  
    // set AK8963 to 16 bit resolution, 100 Hz update rate
    if(writeAK8963Register(MPU9250_ADDRESS,AK8963_CNTL1,AK8963_CNT_MEAS2) < 0){
      return -3;
    }
    HAL_Delay(100); // long wait between AK8963 mode changes     
    // instruct the MPU9250 to get 7 bytes of data from the AK8963 at the sample rate
    readAK8963Registers(MPU9250_ADDRESS,AK8963_HXL,7,Rx_data);    
  } 
  /* setting the sample rate divider */
  if(write_register(MPU9250_ADDRESS,SMPDIV,srd) < 0){ // setting the sample rate divider
    return -4;
  } 
  _srd = srd;
  return 1; 
}

int readSensor() {

  // grab the data from the MPU9250
  if (read_register(MPU9250_ADDRESS,ACCEL_OUT,Rx_data,21) < 0) {
    return -1;
  }
  // combine into 16 bit values
  _axcounts = (((int16_t)Rx_data[0]) << 8) | Rx_data[1];  
  _aycounts = (((int16_t)Rx_data[2]) << 8) | Rx_data[3];
  _azcounts = (((int16_t)Rx_data[4]) << 8) | Rx_data[5];
  _tcounts = (((int16_t)Rx_data[6]) << 8) | Rx_data[7];
  _gxcounts = (((int16_t)Rx_data[8]) << 8) | Rx_data[9];
  _gycounts = (((int16_t)Rx_data[10]) << 8) | Rx_data[11];
  _gzcounts = (((int16_t)Rx_data[12]) << 8) | Rx_data[13];
  _hxcounts = (((int16_t)Rx_data[15]) << 8) | Rx_data[14];
  _hycounts = (((int16_t)Rx_data[17]) << 8) | Rx_data[16];
  _hzcounts = (((int16_t)Rx_data[19]) << 8) | Rx_data[18];
  // transform and convert to float values
  _ax = (((float)(tX[0]*_axcounts + tX[1]*_aycounts + tX[2]*_azcounts) * _accelScale) - _axb)*_axs;
  _ay = (((float)(tY[0]*_axcounts + tY[1]*_aycounts + tY[2]*_azcounts) * _accelScale) - _ayb)*_ays;
  _az = (((float)(tZ[0]*_axcounts + tZ[1]*_aycounts + tZ[2]*_azcounts) * _accelScale) - _azb)*_azs;
  _gx = ((float)(tX[0]*_gxcounts + tX[1]*_gycounts + tX[2]*_gzcounts) * _gyroScale) - _gxb;
  _gy = ((float)(tY[0]*_gxcounts + tY[1]*_gycounts + tY[2]*_gzcounts) * _gyroScale) - _gyb;
  _gz = ((float)(tZ[0]*_gxcounts + tZ[1]*_gycounts + tZ[2]*_gzcounts) * _gyroScale) - _gzb;
  _hx = (((float)(_hxcounts) * _magScaleX) - _hxb)*_hxs;
  _hy = (((float)(_hycounts) * _magScaleY) - _hyb)*_hys;
  _hz = (((float)(_hzcounts) * _magScaleZ) - _hzb)*_hzs;
  _t = ((((float) _tcounts) - _tempOffset)/_tempScale) + _tempOffset;
	
  return 1;
}
